feat:LAB2 добавлен refresh token

--- a/backend/deployment/swagger.yaml
+++ b/backend/deployment/swagger.yaml
@@ -131,3 +131,67 @@ paths:
           description: Пользователь найден
         '404':
           description: Пользователь не найден
+  /auth/register:
+    post:
+      summary: Регистрация нового пользователя (только для администратора)
+      security:
+        - BearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                name:
+                  type: string
+                password:
+                  type: string
+      responses:
+        '201':
+          description: Пользователь успешно зарегистрирован
+        '400':
+          description: Пользователь с таким email уже существует
+
+  /auth/login:
+    post:
+      summary: Авторизация пользователя
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        '200':
+          description: Успешная авторизация, возвращает токен
+        '400':
+          description: Ошибка валидации (отсутствует email или пароль)
+        '404':
+          description: Пользователь не найден
+        '401':
+          description: Неверный пароль
+  /auth/refresh:
+    post:
+      summary: рефреш токена доступа
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                refreshToken:
+                  type: string
+      responses:
+        '200':
+          description: Успешная авторизация, возвращает токен
+        '400':
+          description: Недействительный refresh token
