--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
+    "@eslint/js": "^9.34.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
@@ -32,10 +32,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "jiti": "^2.5.1",
     "prettier": "^3.6.2",
     "sass-embedded": "^1.91.0",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1",
+    "typescript-eslint": "^8.41.0",
     "vite": "^7.1.2"
   }
 }
